// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match the snapshot when not on a page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Component />
  <Footer
    changeCurrentPage={[Function]}
    currentPage=""
  />
</Component>
`;

exports[`App should match the snapshot when on the Camera page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <CameraWindow
    savePicture={[Function]}
    setCameraLoading={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Camera"
  />
</Component>
`;

exports[`App should match the snapshot when on the Collected landmarks page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <CollectedLandmarksContainer
    pics={Array []}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Collected landmarks"
  />
</Component>
`;

exports[`App should match the snapshot when on the Home page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Component />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Home"
  />
</Component>
`;

exports[`App should match the snapshot when on the Login page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Login
    isLoggedIn={true}
    setLoginStatus={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Login"
  />
</Component>
`;

exports[`App should match the snapshot when on the User profile page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <UserProfile
    profilePic=""
    takeProfilePic={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="User profile"
  />
</Component>
`;
